added few changes

--- a/wordpress_test/docker-compose.yml
+++ b/wordpress_test/docker-compose.yml
@@ -16,6 +16,8 @@ services:
   
   wordpress_db:
     image: mysql
+    ports:
+        - 3306:3306
     deploy:
       restart_policy:
         condition: on-failure
@@ -24,6 +26,8 @@ services:
         window: 120s
     environment: 
       MYSQL_ROOT_PASSWORD: cGFzc3dvcmQK
+      MYSQL_DATABASE: wordpress
+      
 
 
 
