--- a/wordpress_test/docker-compose.yml
+++ b/wordpress_test/docker-compose.yml
@@ -20,6 +20,8 @@ services:
         - wordpress_db:mysql
       ports:
         - 80:80
+      volumes:
+         - ./wp-config.php:/var/www/html
       deploy:
         restart_policy:
           condition: on-failure
