--- a/wordpress_test/docker-compose.yml
+++ b/wordpress_test/docker-compose.yml
@@ -21,7 +21,7 @@ services:
     ports:
       - 80:80
     volumes:
-      - ./wp-config.php:/var/www/html
+      - ${PWD}/wp-config.php:/var/www/html/wp-config.php
     deploy:
       restart_policy:
         condition: on-failure
