--- a/wordpress_test/docker-compose.yml
+++ b/wordpress_test/docker-compose.yml
@@ -1,48 +1,38 @@
-version: '3.7'
+version: '3'
+
 services:
-  db:
-    image: mysql
-    ports:
-        - 3306:3306
-    deploy:
-      restart_policy:
-        condition: on-failure
-        delay: 5s
-        max_attempts: 3
-        window: 120s
-    environment: 
-      MYSQL_DATABASE: wordpress
-      MYSQL_ROOT_PASSWORD: cGFzc3dvcmQK
+   db:
+     image: mysql:5.7
+     volumes:
+       - db_data:/var/lib/mysql
+     networks:
+       mysql_internal:
+         aliases: ["db"]
+     environment:
+       MYSQL_ROOT_PASSWORD: P4ssw0rd0!
+       MYSQL_DATABASE: wordpress
+       MYSQL_USER: wordpress
+       MYSQL_PASSWORD: P4ssw0rd0!
+   blog:
+     depends_on:
+       - db
+     image: wordpress:latest
+     networks:
+       mysql_internal:
+       wordpress_public:
+     ports:
+       - "80:80"
+     environment:
+       WORDPRESS_DB_HOST: db:3306
+       WORDPRESS_DB_USER: wordpress
+       WORDPRESS_DB_PASSWORD: P4ssw0rd0!
 
-  wordpress:
-    image: wordpress
-    links:
-      - db:mysql
-    ports:
-      - 80:80
-    configs:
-      - source: my_config
-        target: /var/www/html
-        uid: '33'
-        gid: '33'
-        mode: 0644
-    deploy:
-      restart_policy:
-        condition: on-failure
-        delay: 5s
-        max_attempts: 3
-        window: 120s
-    environment:
-      DB_NAME: wordpress
-      DB_USER: root
-      DB_PASSWORD: cGFzc3dvcmQK
-      DB_HOST: db
-      
-  configs:
-    my_config:
-      file: ${PWD}/config/wp-config.php
-
-  
+volumes:
+    db_data:
+networks:
+  mysql_internal:
+    internal: true
+  wordpress_public:
  
       
 
